# homomorphic-implementors-toolkit

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  INCORPORATING.md  README.md  SECURITY.md  VERSIONING.md
cmake/: download-external-project.cmake  enable-clang-tidy.cmake  enable-hit-code-format.cmake  hit-clang-format.cmake  set-common-flags.cmake
cmake/modules/: FindBoostLib.cmake  FindGlogLib.cmake  FindGoogleTestLib.cmake  FindLatticppLib.cmake  FindProtobufLib.cmake  FindSealLib.cmake  FindTbbLib.cmake
examples/: CMakeLists.txt  evaluator_demo.cpp  evaluator_example.cpp  example_1_ckks.cpp  example_2_plaintext.cpp  example_3_evaluators.cpp  example_3_parameters.cpp  example_4_linearalgebra.cpp  example_5_serialization.cpp  example_6_bootstrapping.cpp  example_serialization.cpp  examples_3_evaluators.cpp  run_examples.cpp  temp.cpp
helib/: CKKSInstance.cpp  CMakeLists.txt  common.h
helib/api/: ciphertext.h  decryptor.cpp  decryptor.h  encryptor.cpp  encryptor.h
helib/api/evaluator/: debug.cpp  debug.h  depthfinder.cpp  depthfinder.h  homomorphic.cpp  opcount.cpp  opcount.h  plaintext.cpp  plaintext.h  scaleestimator.cpp  scaleestimator.h
hit/: CKKSInstance.cpp  CKKSInstance.h  CMakeLists.txt  common.cpp  common.h  matrix.cpp  matrix.h  sealutils.h
hit/api/: ciphertext.cpp  ciphertext.h  decryptor.cpp  decryptor.h  encryptor.cpp  encryptor.h  evaluator.cpp  evaluator.h
hit/api/evaluator/: debug.cpp  debug.h  depthfinder.cpp  depthfinder.h  homomorphic.cpp  homomorphic.h  opcount.cpp  opcount.h  plaintext.cpp  plaintext.h  scaleestimator.cpp  scaleestimator.h
protobuf/: CMakeLists.txt  ciphertext.proto  ciphertext_vector.proto  ckksparams.proto  encoding_unit.proto  encrypted_col_vector.proto  encrypted_matrix.proto  encrypted_row_vector.proto
scripts/cmake/: apply-git-patch.cmake  update-git-submodules.cmake
scripts/codebuild/: run-clang-format.sh  run-clang-tools.sh  run-hit-ci.sh  run-unit-tests.sh  run_unit_tests.sh  standard_build.yml
scripts/codebuild/docker/: build_ci_images.sh  ubuntu-18.04_base.docker  ubuntu-18.04_clang-10x.docker  ubuntu-18.04_gcc-9x.docker
src/: CKKSInstance.cpp  CKKSInstance.h  CMakeLists.txt  README.md  common.cpp  common.h  matrix.cpp  matrix.h  sealutils.h
src/api/: CMakeLists.txt  ciphertext.cpp  ciphertext.h  decryptor.cpp  decryptor.h  encryptor.cpp  encryptor.h  evaluator.cpp  evaluator.h
src/api/evaluator/: CMakeLists.txt  debug.cpp  debug.h  depthfinder.cpp  depthfinder.h  homomorphic.cpp  homomorphic.h  opcount.cpp  opcount.h  plaintext.cpp  plaintext.h  scaleestimator.cpp  scaleestimator.h
src/hit/: CKKSInstance.cpp  CKKSInstance.h  CMakeLists.txt  common.cpp  common.h  hit.h  latticpputils.cpp  latticpputils.h  lattigoutils.h  matrix.cpp  matrix.h  sealutils.cpp  sealutils.h
src/hit/api/: CMakeLists.txt  backend.h  ciphertext.cpp  ciphertext.h  context.cpp  context.h  decryptor.cpp  decryptor.h  encryptor.cpp  encryptor.h  evaluator.cpp  evaluator.h  linearalgebra.cpp  linearalgebra.h  metadata.h  params.cpp  params.h
src/hit/api/backend/: lattigo.cpp  lattigo.h  seal.cpp  seal.h  sealctx.cpp  sealctx.h
src/hit/api/evaluator/: CMakeLists.txt  debug.cpp  debug.h  depthfinder.cpp  depthfinder.h  explicitdepthfinder.cpp  explicitdepthfinder.h  homomorphic.cpp  homomorphic.h  implicitdepthfinder.cpp  implicitdepthfinder.h  opcount.cpp  opcount.h  plaintext.cpp  plaintext.h  rotations.cpp  rotations.h  scaleestimator.cpp  scaleestimator.h  seal.h
src/hit/api/linearalgebra/: CMakeLists.txt  encodingunit.cpp  encodingunit.h  encryptedcolvector.cpp  encryptedcolvector.h  encryptedmatrix.cpp  encryptedmatrix.h  encryptedrowvector.cpp  encryptedrowvector.h  linearalgebra.cpp  linearalgebra.h
tests/: CKKSInstance.cpp  CMakeLists.txt  matrix.cpp  serialization.cpp  testutil.cpp  testutil.h
tests/api/: CMakeLists.txt  ciphertext.cpp  linearalgebra.cpp
tests/api/evaluator/: CMakeLists.txt  debug.cpp  depthfinder.cpp  explicitdepthfinder.cpp  homomorphic.cpp  implicitdepthfinder.cpp  opcount.cpp  plaintext.cpp  scaleestimator.cpp
tests/api/linearalgebra/: CMakeLists.txt  encodingunit.cpp  encryptedcolvector.cpp  encryptedmatrix.cpp  encryptedrowvector.cpp  linearalgebra.cpp
